# yparser

./: .gitignore  QuickStart.md  README.md
FS diagram/: yparser_fs.ai
UML diagram/: yparser_uml.ai
UML diagram/yparseruml/: yparseruml.sln
UML diagram/yparseruml/yparseruml/: yparseruml.vcxproj.filters
UML diagram/yparseruml/yparseruml/include/interface/: interface.h
UML diagram/yparseruml/yparseruml/include/type/: YmlRaw.h
UML diagram/yparseruml/yparseruml/include/type/derived/: YmlList.h
demo/: CMakeLists.txt  config.yml  config0.yml  main.cpp  test.yml
demo/configs/: config.yml
demo/test/: blob_generator.hpp  format_test.hpp  io_yml_string.hpp  parse_test.hpp  serialize_test2.hpp
demo/tests/: format_test.hpp  io_yml_string.hpp  parse_test.hpp  serialize_test.hpp  serialize_test1.hpp  serialize_test2.hpp
demo/yml/: example.yml  example_src.yml
easyio/: CMakeLists.txt  easyio.cpp  easyio.h
easyio/include/: easyio.cpp  easyio.h
graph/UML diagram/yparseruml/yparseruml/: yparseruml.vcxproj
graph/UML diagram/yparseruml/yparseruml/include/interface/: interface.cpp
graph/UML diagram/yparseruml/yparseruml/include/type/derived/: YmlList.cpp  YmlMap.cpp  YmlMap.h  YmlScalar.h
graph/UML diagram/yparseruml/yparseruml/include/util/: util.cpp
unitest/: CMakeLists.txt  globalheaders.h  main.cpp
unitest/fn/: fn.hpp
unitest/test/parse_test1/: test.hpp
unitest/test/parse_test2/: test.hpp
unitest/test/test1/: input.yml  test.hpp
unitest/test/test2/: output.txt  test.hpp
unitest/test/test3/: output.txt  test.hpp
unitest/test/test4/: output.txt  test.hpp
unitest/test/test5/: test.hpp
unitest/test/test6/: test.hpp
untitled/: CMakeLists.txt
untitled/include/: library.h
yparser/: CMakeLists.txt
yparser/include/: globalheaders.h  yparser.h
yparser/include/exception/: yparser_error.cpp  yparser_error.h
yparser/include/exception/derived/: list_key_parse_err.hpp  list_value_parse_err.hpp  map_key_parse_err.hpp  map_value_parse_err.hpp  root_parse_err.hpp  scalar_key_parse_err.hpp  scalar_value_parse_err.hpp  unexpected_type_err.hpp  unknown_type_err.hpp
yparser/include/interface/: interface.h  interface.hpp
yparser/include/interface/com/: IHashable.hpp  IKeyValueTangible.hpp  ISerializable.hpp  IStreamable.hpp  IStringable.hpp
yparser/include/parser/: parser.cpp  parser.h
yparser/include/type/: YmlRaw.cpp  YmlRaw.h
yparser/include/type/derived/: YmlList.cpp  YmlList.h  YmlMap.cpp  YmlMap.h  YmlRoot.cpp  YmlRoot.h  YmlScalar.cpp  YmlScalar.h
yparser/include/type/derived/impl/: YmlList.cpp  YmlMap.cpp  YmlRoot.cpp  YmlScalar.cpp
yparser/include/util/: util.cpp  util.h
